--- a/style.css
+++ b/style.css
@@ -18,12 +18,13 @@ body {
 
 /* ************************************** TOP PART ************************************** */
 .top {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url(budget-controller-background.jpg);
   background-size: cover;
   background-position: center;
   position: relative;
-  height: 40vh;
+  opacity: 0.9;
+  height: 45vh;
 }
 
 .budget {
@@ -61,7 +62,7 @@ body {
 }
 
 .budget__income {
-  background-color: #1a7c43;
+  background-color: #1e9751;
   margin-bottom: 10px;
   display: flex;
   justify-content: space-between;
@@ -69,7 +70,7 @@ body {
 }
 
 .budget__expenses {
-  background-color: #9b2e22;
+  background-color: #b13527;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -88,8 +89,83 @@ body {
 }
 
 .budget__expenses--percentage {
-  background-color: #bb554ae5;
+  background-color: #cc5c50e5;
   padding: 2px;
   border-radius: 2px;
   font-size: 12px;
 }
+
+/* ************************************** BOTTOM PART ************************************** */
+
+/* ******** FORM ******** */
+.add {
+  background-color: #f1f1f1;
+  border-bottom: 1px solid #e7e7e7;
+  padding: 14px;
+}
+
+.add__container {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.add__type {
+  background-color: #fff;
+  border: 1px solid #e7e7e7;
+  border-radius: 5px;
+  width: 55px;
+  height: 44px;
+  font-size: 18px;
+  color: inherit;
+  margin-right: 10px;
+  font-weight: 300;
+}
+
+.add__description,
+.add__value {
+  background-color: #fff;
+  border: 1px solid #e7e7e7;
+  border-radius: 5px;
+  padding: 12px 15px;
+  font-size: 14px;
+  font-family: inherit;
+  color: inherit;
+  margin-right: 10px;
+}
+
+.add__description {
+  width: 400px;
+}
+
+.add__value {
+  width: 100px;
+}
+
+.add__btn {
+  font-size: 35px;
+  background: none;
+  border: none;
+  color: #1e9751;
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 1.1;
+  margin-left: 10px;
+}
+
+.add__btn:active {
+  transform: translateY(2px);
+}
+
+.add__type:focus,
+.add__description:focus,
+.add__value:focus {
+  outline: none;
+  border: 1px solid #1e9751;
+}
+
+.add__btn:focus {
+  outline: none;
+}
+
+/* ******** LISTS ******** */
