Formatting numbers, display current date and change inout item btn

--- a/style.css
+++ b/style.css
@@ -95,6 +95,14 @@ body {
   font-size: 12px;
 }
 
+.red {
+  color: #b13527 !important;
+}
+
+.red-focus:focus {
+  border: 1px solid #b13527 !important;
+}
+
 /* ************************************** BOTTOM PART ************************************** */
 
 /* ******** FORM ******** */
